# bubble-craps

./: LICENSE  config.yaml  pyproject.toml
dev/: debug_detector.py
scripts/: calibrate.py  capture.py  debug_detector.py  pop.py  roll.py  test_motor.py
src/bubble_craps/: camera.py  config.py  detector.py  main.py  motor.py  mqtt_client.py  ring_light.py  state_machine.py
